# qt-stopwatch

./: .gitignore  CMakeLists.txt
ctl/: CMakeLists.txt
ctl/src/: main.cpp
gui/: CMakeLists.txt
gui/src/: IpcServer.cpp  IpcServer.hpp  StopwatchWidget.cpp  StopwatchWidget.hpp  UpdateWorker.cpp  UpdateWorker.hpp  main.cpp
src/: StopwatchWidget.cpp  StopwatchWidget.hpp  UpdateWorker.cpp  main.cpp
